goingserver/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goingserver
  labels:
    app.kubernetes.io/name: goingserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: goingserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: goingserver
    spec:
      containers:
      - name: goingserver
        image: valeriymolchanov/goingserver:0.4
        ports:
        - containerPort: 30099
          name: grpc
        resources:
          limits:
            memory: "200Mi"
            cpu: "500m"
