goingserver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goingserver
  labels:
    app.kubernetes.io/name: goingserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: goingserver
  ports:
    - name: grpc
      protocol: TCP
      port: 30111
      targetPort: grpc
      # nodePort: 30222
