goingserver/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: goingserver
spec:
  rules:
  - host: localhost.test
    http:
      paths:
      - path: /grpc(/|$)(.*)
        backend:
          serviceName: goingserver
          servicePort: grpc
  tls:
  - hosts:
      - localhost.test
    secretName: tls-secret-grpc
